updating Makefile flags and some fixes to syntax

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -29,10 +29,10 @@ INCLUDE := -I$(SGX_SDK)/include \
 	-I. \
 	-I..
 
-CFLAGS  += -nostdinc -pedantic \
-	-fvisibility=hidden -fpie -fPIC -fstack-protector -mpclmul -maes -mavx -w \
-	-W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 -fPIC\
-	-Werror=implicit-function-declaration -Wconversion
+CFLAGS  += -nostdinc \
+	-fvisibility=hidden -fpie -fPIC -fstack-protector -mpclmul -maes -mavx \
+	-W -Wall -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 -fPIC\
+	-Werror=implicit-function-declaration
 
 
 
