adding timer to the backend_sgx

--- a/backend_sgx/Makefile
+++ b/backend_sgx/Makefile
@@ -52,6 +52,7 @@ EDGER8ER = $(SGX_SDK)/bin/x64/sgx_edger8r
 
 objs := nexus_enclave_u.o \
 	main.o \
+	timer.o \
 	keybuf.o \
 	volume_ops.o \
 	dir_ops.o \
